# OS-labs

./: .clang-tidy  CMakeLists.txt  README.md
kp/: Makefile
kp/include/: get_line.cpp  get_line.h
kp/src/: A.cpp  B.cpp  C.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/doc/: lab2.tex
lab2/include/: child1.h  child2.h  parent.h
lab2/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/doc/: lab3.tex
lab3/include/: lab3.h  utils.h
lab3/src/: lab3.cpp  utils.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/doc/: lab4.tex
lab4/include/: parent.h  utils.h
lab4/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab5/: CMakeLists.txt  main_dynamic.cpp  main_static.cpp
lab5/doc/: lab5.tex  log-style.sty
lab5/include/: signature.h
lab5/src/: implem1.cpp  implem2.cpp
lab6-8/: Makefile  client  client.cpp  net_func.h  node.h  worker  worker.cpp
lab6-8/doc/: lab6-8.tex
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
